# gst-plugin-anaglyph

./: AUTHORS  README  configure.ac  gst-anaglyph-example-1.sh
src/: Makefile.am  anaglyph.c  anaglyph.h  gstanaglyph.c  gstanaglyph.h  gstplugin.c
